# python-radiokit

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  foo.tif  pyproject.toml  setup.py
src/cpp/: CMakeLists.txt  itm_bindings.cpp  itm_bindings.h
src/radiokit/: __init__.py
src/radiokit/bindings/: __init__.py  itm_bindings.cpp
src/radiokit/models/: itm.py
src/radiokit/terrain/: opentopography.py
tests/: scratch.py  test.py
