[build-system]
requires = ["scikit-build", "setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-kit"
version = "0.1.0"
description = "A Python library for radio propagation simulations."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
cmake-source-dir = "src/cpp"  # Directory containing the CMakeLists.txt file
