[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiokit"
version = "0.1.0"
description = "Radio propagation models for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Matthew Patrick", email = "you@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["radiokit", "radiokit.bindings"]
